--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -1,13 +1,16 @@
-service: formulaone-graphql
-stage: dev
 
 #HTTP ENDPOINT
-endpoint: https://eu1.prisma.sh/public-amberdevourer-412/formulaone-graphql/dev
+endpoint: 'https://eu1.prisma.sh/public-volcanoking-719/formulaone-graphql/dev'
 
 #point to file that has datamodel
 datamodel: datamodel.graphql
 
+# deploy hook
+hooks:
+  post-deploy:
+    - graphql get-schema --project database 
+
 ## Your access to an API
 secret: mysecret123
 
-cluster: public-amberdevourer-412/prisma-eu1
+
