--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -1,6 +1,6 @@
 
 #HTTP ENDPOINT
-endpoint: 'https://eu1.prisma.sh/public-volcanoking-719/formulaone-graphql/dev'
+endpoint: https://eu1.prisma.sh/public-volcanoking-719/formulaone-graphql/dev
 
 #point to file that has datamodel
 datamodel: datamodel.graphql
@@ -9,6 +9,7 @@ datamodel: datamodel.graphql
 hooks:
   post-deploy:
     - graphql get-schema --project database 
+    - graphql prepare
 
 ## Your access to an API
 secret: mysecret123
