--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "graphql-cli": "^2.16.7",
     "graphql-yoga": "^1.16.2",
     "prisma-binding": "^2.1.5"
   }
