--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "scripts":{
+  "scripts": {
     "server": "node src/index.js",
     "playground": "graphql playground"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "^1.16.2",
+    "jsonwebtoken": "^8.3.0",
     "prisma-binding": "^2.1.5"
   }
 }
