--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "eslint": "^5.6.0",
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
