--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "server": "node src/index.js",
-    "playground": "graphql playground"
+    "server": "nodemon -e js, graphql -x node --watch src/index.js ",
+    "playground": "nodemon -e js,graphql -x  graphql playground"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -13,6 +13,7 @@
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
+    "nodemon": "^1.18.4",
     "prisma-binding": "^2.1.5"
   }
 }
