--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.18.4",
     "prisma-binding": "^2.1.5"
   }
