--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -1,6 +1,6 @@
 
 #HTTP ENDPOINT
-endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: ${env:PROD_ENDPOINT}
 
 #point to file that has datamodel
 datamodel: datamodel.graphql
