--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "eslint": "^5.6.0",
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
     "nodemailer": "^4.6.8",
+    "nodemailer-postmark-transport": "^1.4.0",
     "nodemon": "^1.18.4",
     "prisma-binding": "^2.1.5"
   }
