--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
     "nodemailer": "^4.6.8",
-    "nodemailer-postmark-transport": "^1.4.0",
     "nodemon": "^1.18.4",
+    "postmark": "^2.2.0",
     "prisma-binding": "^2.1.5"
   }
 }
