--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "license": "MIT",
   "scripts": {
     "server": "nodemon -e js, graphql -x node src/index.js ",
-    "playground": "nodemon -e js,graphql -x  graphql playground"
+    "playground": "nodemon -e js,graphql -x  graphql playground",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
+    
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "eslint": "^5.6.0",
     "graphql-cli": "^2.16.7",
+    "graphql-tools": "^4.0.3",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.4",
     "postmark": "^2.2.0",
     "prisma-binding": "^2.1.5"
+  },
+  "devDependencies": {
+    "babel-jest": "^23.6.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0"
   }
 }
