--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "yarn": "1.x"
+  },
   "scripts": {
     "server": "nodemon -e js, graphql -x node src/index.js ",
     "playground": "nodemon -e js,graphql -x  graphql playground",
