--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "yarn": "1.x"
+    "yarn": "1.x",
+    "node": "6.x"
   },
   "scripts": {
     "server": "nodemon -e js, graphql -x node src/index.js ",
