--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "engines": {
     "yarn": "1.x",
-    "node": "6.x"
+    "node": "8.x",
+    "npm": "6.x"
   },
   "scripts": {
     "server": "nodemon -e js, graphql -x node src/index.js ",
