--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "lodash": "^4.17.11"
+  },
+  "respository":{
+    "url": "https://github.com/AmoDinho/formulaone-graphql.git"
   }
 }
