--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "eslint": "^5.6.0",
+    "event-stream": "3.3.4",
     "graphql-cli": "^2.16.7",
     "graphql-tools": "^4.0.3",
     "graphql-yoga": "^1.16.2",
@@ -34,7 +35,7 @@
     "jest-cli": "^23.6.0",
     "lodash": "^4.17.11"
   },
-  "respository":{
+  "respository": {
     "url": "https://github.com/AmoDinho/formulaone-graphql.git"
   }
 }
